--- a/oneproject/easy/templates/dashboard.html
+++ b/oneproject/easy/templates/dashboard.html
@@ -5,7 +5,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard</title>
+
+    <title>{% block title %}User Dashboard{% endblock title %}</title>
+
     <link rel="stylesheet" href="{% static 'css/dashboard.css' %}" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -14,6 +16,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&display=swap"
         rel="stylesheet">
+
+    {% block head %}{% endblock head %}
 </head>
 
 <body>
@@ -30,7 +34,7 @@
         <nav class="sidebar-nav">
             <ul class="nav-list primary-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="{% url 'dashboard' %}" class="nav-link">
                         <span class="material-symbols-rounded">dashboard</span>
                         <span class="nav-label">Dashboard</span>
                     </a>
@@ -44,7 +48,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="{% url 'check' %}" class="nav-link">
                         <span class="material-symbols-rounded">check</span>
                         <span class="nav-label">Check</span>
                     </a>
@@ -73,7 +77,6 @@
 
                 </li>
             </ul>
-            <!-- Secondary Bottom Nav -->
             <ul class="nav-list secondary-nav">
                 <li class="nav-item">
                     <a href="#" class="nav-link">
@@ -86,20 +89,65 @@
         </nav>
     </aside>
     {% block content %}
-    <div class="bothsection">
-        <div class="cardmaterial">
-            <div class="searching">
-                <h2>Dashboard</h2>
-                <input type="search" placeholder="Search for available equipments" id="searchbox">
+    <div class="allthree">
+        <div class="bothsection">
+            <div class="both">
+                <div class="cardmaterial">
+                    <div class="searching">
+                        <h2>Dashboard</h2>
+                        <input type="search" placeholder="Search for available equipments" id="searchbox">
+                    </div>
+                </div>
+                <div class="three">
+                    <div class="filters">
+                        <label for="">Filer by:</label>
+                        <select id="typeFilter" name="">
+                            <option value="">Equipment type</option>
+                            <option value="">Drill</option>
+                            <option value="">Pump</option>
+                            <option value="">Valve</option>
+                        </select>
+                        <select name="" id="dateFilter">
+                            <option value="2025-06-09">2025-06-09</option>
+                            <option value="2025-06-08">2025-06-08</option>
+                        </select>
+                        <select name="" id="purposeFilter">
+                            <option value="">Purpose</option>
+                            <option value="inspection">Inspection</option>
+                            <option value="maintenance">Maintenance</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="equipments">
+                    {% for report in reports %}
+                    <div class="card" data-title="{{ report.title|lower }}" data-type="{{report.equipment_type|lower}}"
+                        data-date="{{report.date}}" data-purpose="{{report.purpose|lower}}">
+                        {% if report.image %}
+                        <img src={{report.image}}>
+                        {% else %}
+                        <p>No image available</p>
+                        {% endif %}
+                        <div class="info">
+                            <h3>{{report.title}}</h3>
+                            <p>{{report.description}}</p>
+                            <p>Status: <span class="status">{{report.status}}</span></p>
+                            <p>Created by <strong>{{report.inspector}}</strong></p>
+                            <p>Created at <strong>{{report.date}}</strong></p>
+                        </div>
+                        <button class="check-btn">Start checking</button>
+                    </div>
+                    {% endfor %}
+
+                </div>
             </div>
         </div>
-
         <div class="userandinfoprof">
             <div class="userfield">
-                <h4>Ivan</h4>
+                <h4>{{ user.username}}</h4>
                 <h4>ID:</h4>
                 <img class="userpic" src="{% static 'images/OilCheck.jpg' %}">
-                <img class="userpic" src="{% static 'images/OilCheck.jpg' %}">
+                <img class="userpic" src="{% static 'images/notifications.png' %}">
             </div>
             <div class="wrapper">
                 <header>
@@ -145,9 +193,18 @@
             </div>
         </div>
     </div>
+
+
     </div>
+    </div>
+    <!-- default content if any -->
     {% endblock content %}
+
+    <script src="{% static 'js/calendar.js' %}"></script>
+    <script src="{% static 'js/dashsearch.js' %}"></script>
+    <!-- <script src="{% static 'js/filterdash.js' %}"></script> -->
+
+    {% block scripts %}{% endblock scripts %}
 </body>
-<script src="{% static 'js/calendar.js' %}"></script>
 
 </html>
